--- a/css/style.css
+++ b/css/style.css
@@ -84,20 +84,26 @@ a {
 /*灯笼布局*/
 
 #page1>.p1_langtern {
-	width: 45vw;
-	height: 47.2vh;
-	z-index: 0;
-	font-size: 3.506rem;
-	color: #fff;
-	text-align: center;
-	position: absolute;
-	top: -2%;
-	right: 0;
-	left: 0;
-	margin: auto;
-	background: url(../img/p1_lantern.png) no-repeat center bottom;
 	background-size: 100%;
 	padding-top: 24vh;
+	width: 45vw;
+    height: 71.2vh;
+    font-size: 3.506rem;
+    color: white;
+    position: absolute;
+    top: -3.4%;
+    right: 0;
+    left: 0;
+    margin: auto;
+    background: url(../img/p1_lantern.png) no-repeat center bottom;
+    background-size: 100%;
+    padding-top: 31vh;
+    text-align: center;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -ms-box-sizing: border-box;
+    -o-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 
